# employee_analyze

./: .gitignore  LICENSE  README.md  setup.cfg
src/employee_analyze/: __init__.py  main.py  utils.py
src/employee_analyze/data/: test_data_1.csv  test_data_2.csv
