[metadata]
name = employee-analyze-tz
version = 0.1.0
author = Vladimir Kovyazin
author_email = vkovyzin@yandex.ru
description = Extracting data from employee csv
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vovetta/employee_analyze
project_urls =
    Bug Tracker = https://github.com/Vovetta/employee_analyze/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas>=1.2.4
python_requires = >=3.7

[options.packages.find]
where = src